--- a/package.json
+++ b/package.json
@@ -5,21 +5,24 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --content-base dist/"
+    "start": "webpack-dev-server --inline",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "p2": "^0.7.1",
-    "phaser": "^2.6.2",
+    "phaser-ce": "^2.8.0",
     "pixi.js": "^4.5.2"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^4.0.1",
     "expose-loader": "^0.7.3",
     "html-webpack-plugin": "^2.28.0",
     "lite-server": "^2.3.0",
     "ts-loader": "^2.1.0",
+    "typescript": "^2.3.4",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   }
